--- a/index.html
+++ b/index.html
@@ -659,6 +659,23 @@
                 <p class="project-category">Web design</p>
               </a>
             </li>
+
+            <li class="project-item  active" data-filter-item data-category="angular app">
+              <a href="https://incandescent-dasik-7f3c25.netlify.app/">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <i class="ri-eye-line"></i>
+                  </div>
+
+                  <img src="./assets/images/project-10.png" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Facebook clone on Angular and Firebase</h3>
+
+                <p class="project-category">Angular App</p>
+              </a>
+            </li>
             
           </ul>
 
