fix style buttons

--- a/index.html
+++ b/index.html
@@ -451,16 +451,16 @@
               <button data-filter-btn>Web design</button>
             </li>
 
-            <li class="select-item">
-              <button data-select-item>Angular App</button>
+            <li class="filter-item">
+              <button data-filter-btn>Angular App</button>
             </li>
 
-            <li class="select-item">
-              <button data-select-item>Vue App</button>
+            <li class="filter-item">
+              <button data-filter-btn>Vue App</button>
             </li>
 
-            <li class="select-item">
-              <button data-select-item>Web App</button>
+            <li class="filter-item">
+              <button data-filter-btn>Web App</button>
             </li>
 
           </ul>
