delete phone num

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="contact-info">
               <p class="contact-title">Phone</p>
 
-              <a href="tel:+79994537345" class="contact-link">+7 (999) 453-7345 <br> +7 (701) 262-8080 </a>
+              <a href="tel:+79994537345" class="contact-link">+7 (999) 453-7345</a>
             </div>
 
           </li>
