--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <div class="contact-info">
               <p class="contact-title">Location</p>
 
-              <address>Pavlodar, Kazakhstan</address>
+              <address>Omsk, Russia</address>
             </div>
 
           </li>
