add new project

--- a/index.html
+++ b/index.html
@@ -421,6 +421,22 @@
 
           <ul class="project-list">
 
+            <li class="project-item active" data-filter-item data-category="web design">
+              <a href="https://ilya-begalko.github.io/Purrweb-TestTask/">
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <i class="ri-eye-line"></i>
+                  </div>
+
+                  <img src="./assets/images/project-19.png" loading="lazy" />
+                </figure>
+
+                <h3 class="project-title">Website for phone app</h3>
+
+                <p class="project-category">Web design</p>
+              </a>
+            </li>
+
             <li class="project-item active" data-filter-item data-category="web app">
               <a href="https://ilya-begalko.github.io/fashion-picker/">
                 <figure class="project-img">
