add new angular project

--- a/index.html
+++ b/index.html
@@ -421,6 +421,22 @@
 
           <ul class="project-list">
 
+            <li class="project-item active" data-filter-item data-category="angular app">
+              <a href="https://master--starlit-pasca-b9a850.netlify.app/">
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <i class="ri-eye-line"></i>
+                  </div>
+
+                  <img src="./assets/images/project-20.png" loading="lazy" />
+                </figure>
+
+                <h3 class="project-title">Weather app on Angular</h3>
+
+                <p class="project-category">Angular App</p>
+              </a>
+            </li>
+
             <li class="project-item active" data-filter-item data-category="web design">
               <a href="https://ilya-begalko.github.io/Purrweb-TestTask/">
                 <figure class="project-img">
