Update info and projects

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="contact-info">
               <p class="contact-title">Location</p>
 
-              <address>Omsk, Russia</address>
+              <address>Saint Petersburg, Russia</address>
             </div>
           </li>
         </ul>
@@ -314,6 +314,39 @@
             <li class="skills-item">
               <div class="title-wrapper">
                 <h5 class="h5">Angular</h5>
+                <data value="70">70%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 70%"></div>
+              </div>
+            </li>
+
+            <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">React</h5>
+                <data value="20">20%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 20%"></div>
+              </div>
+            </li>
+
+            <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">Vue</h5>
+                <data value="20">20%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 20%"></div>
+              </div>
+            </li>
+
+            <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">Layout</h5>
                 <data value="60">60%</data>
               </div>
 
@@ -324,12 +357,45 @@
 
             <li class="skills-item">
               <div class="title-wrapper">
-                <h5 class="h5">Layout</h5>
+                <h5 class="h5">GIT</h5>
+                <data value="80">80%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 80%"></div>
+              </div>
+            </li>
+
+            <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">SVN</h5>
                 <data value="50">50%</data>
               </div>
 
               <div class="skill-progress-bg">
                 <div class="skill-progress-fill" style="width: 50%"></div>
+              </div>
+            </li>
+
+            <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">Figma</h5>
+                <data value="50">50%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 50%"></div>
+              </div>
+            </li>
+
+            <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">Webpack</h5>
+                <data value="40">40%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 40%"></div>
               </div>
             </li>
 
@@ -434,6 +500,22 @@
                 <h3 class="project-title">Weather app on Angular</h3>
 
                 <p class="project-category">Angular App</p>
+              </a>
+            </li>
+
+            <li class="project-item active" data-filter-item data-category="components">
+              <a href="https://ilya-begalko.github.io/upload-module/">
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <i class="ri-eye-line"></i>
+                  </div>
+
+                  <img src="./assets/images/project-21.png" loading="lazy" />
+                </figure>
+
+                <h3 class="project-title">Animated Upload Modal</h3>
+
+                <p class="project-category">Components</p>
               </a>
             </li>
 
